# fl-adni-classification

./: .gitignore  .pre-commit-config.yaml  README.md  cleanup_flower.sh  multi_config.py  pyproject.toml  run_local_simulation.py  run_multi_machines_tmux.py
adni_classification/config/: __init__.py  config.py  fl_config.py
adni_classification/datasets/: __init__.py  adni_base_dataset.py  adni_cache_dataset.py  adni_dataset.py  adni_persistent_dataset.py  adni_smartcache_dataset.py  dataset_factory.py  transforms.py
adni_classification/models/: __init__.py  base_model.py  densenet3d.py  model_factory.py  resnet3d.py  rosanna_cnn.py  securefed_cnn.py  simple_cnn.py
adni_classification/scripts/: train.py
adni_classification/utils/: __init__.py  losses.py  pretrained_utils.py  torch_utils.py  training_utils.py  visualization.py
adni_flwr/: __init__.py  client_app.py  server_app.py  server_fn.py  task.py
adni_flwr/strategies/: __init__.py  base.py  factory.py  fedavg.py  fedprox.py  secagg.py  secaggplus.py
configs/: client1.yaml  client2.yaml  default.yaml  densenet.yaml  fl_server.yaml  resnet.yaml  resnet18.yaml  resnet18_low_memory.yaml  resnet50.yaml  resnet50_low_memory.yaml  rosanna_3t_P1_2classes_1220images.yaml  securefed_3t_P1_2classes_1220images.yaml  securefed_3t_P1_2classes_1220images_focal.yaml  securefed_3t_P1_2classes_717images.yaml  securefed_3t_P1_3classes_1220images.yaml  securefed_3t_P2_2classes_1220images.yaml  securefed_3t_P2_2classes_717images.yaml  securefed_3t_P2_3classes_1220images.yaml  securefed_cnn.yaml  securefed_cnn_2classes.yaml  securefed_cnn_persistent.yaml  simple_cnn.yaml
configs/fl-1.5T-594images/: client1.yaml  client2.yaml  fl_server.yaml
configs/fl-3T_P1-1220images-2classes-2clients-fedavg/: client1.yaml  client2.yaml  fl_server.yaml
configs/fl-3T_P1-1220images-2classes-2clients-fedprox/: client1.yaml  client2.yaml  fl_server.yaml
configs/fl-3T_P1-1220images-2classes-3clients-fedavg/: client1.yaml  client2.yaml  client3.yaml  fl_server.yaml
configs/fl-3T_P1-1220images-2classes-3clients-fedprox/: client1.yaml  client2.yaml  client3.yaml  fl_server.yaml
configs/fl-3T_P1-1220images-2classes-3clients-secagg/: client1.yaml  client2.yaml  client3.yaml  fl_server.yaml
configs/fl-3T_P2-1220images/: client1.yaml  client2.yaml  fl_server.yaml
configs/fl-3T_P2_2classes-717images/: client1.yaml  client2.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-1220images-2classes-2clients-fedavg/: client1.yaml  client2.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-1220images-2classes-2clients-fedprox/: client1.yaml  client2.yaml  fl_server.yaml
docs/: TEST_SCRIPT_USAGE.md
scripts/: calculate_adni_statistics_by_diagnosis.py  convert_3d_to_2d_slices.py  convert_dicom_to_nifti.sh  convert_pretrained_weights.py  filter_csv_by_images.py  preprocess_mri.py  preprocess_mri_2.py  remove_duplicate.py  split_data_for_fl.py  test.py  train.py
(+64 files in other folders)
