[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adni_classification"
version = "0.1.0"
description = "ADNI MRI Classification using MONAI and PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Tin Hoang" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=2.0.0",
    "monai>=1.2.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.12.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "nibabel>=5.2.1",
    "wandb>=0.15.0",
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "filelock>=3.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=adni_classification --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["adni_classification", "adni_flwr"]

[project.urls]
"Homepage" = "https://github.com/tin-hoang/fl-adni-classification"
"Bug Tracker" = "https://github.com/tin-hoang/fl-adni-classification/issues"

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "adni_flwr.server_app:app"
clientapp = "adni_flwr.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-fit = 1.0
batch-size = 8
client-config-files = "configs/client1.yaml,configs/client2.yaml"
server-config-file = "configs/fl_server.yaml"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2  # For 2 clients

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 2
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 0.5  # Split GPU resources for clients
